--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "author": "Luke Batchelor",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.0.19",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "husky": "^1.1.2",
+    "lint-staged": "^7.3.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
