--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^2.0.19",
+    "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-source-filesystem": "^2.0.5",
+    "gatsby-transformer-remark": "^2.1.8",
+    "gatsby-transformer-sharp": "^2.1.4",
     "husky": "^1.1.2",
     "lint-staged": "^7.3.0",
     "react": "^16.5.1",
