Adds contact page content

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "workbench.settings.editor": "json",
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
